# DriftEngine

./: .gitignore  .gitmodules  ASSETS_SYSTEM_SUMMARY.md  CMakeLists.txt  FONT_FIXES_README.md  FONT_SYSTEM_REFACTOR_SUMMARY.md  IMPROVEMENTS.md  OM.html  PERFORMANCE_FIXES_README.md  Pipeline.html  README.md  README_Build_Core.md  README_FontSystem.md  TERRAIN_IMPROVEMENTS.md  TERRAIN_STITCHING.md  UI_INTEGRATION_EXAMPLE.md  UI_SYSTEM_ANALYSIS.md  UI_USAGE_EXAMPLE.md  WYSIWYG_UI_PLAN.md  build_core.bat  build_core.sh  old_UIBATCHERDX11.H  old_UIBATCHERDXX.cpp  pipelinestate.html  test_color_conversion.cpp  test_font_atlas.cpp  test_font_fixes.cpp  test_font_loading.cpp  test_rhi_debug.cpp
build_core/x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
docs/: CLIPPING_FIXES.md  FONT_SYSTEM_GUIDE.md  FontBatching_Improvements.md  FontSystem.md  FontSystem_Improvements.md  FontSystem_Refactored.md  INTERFACE_SEPARATION.md  LAYOUT_FIXES.md  MSDF_Font_System.md  Optimization_Guide.md  RHI_Debugging_Guide.md  SPECIFIC_CLIPPING_FIXES.md  UI_LAYOUT_IMPROVEMENTS.md  UI_OVERHAUL_PLAN.md
githooks/: pre-commit
shaders/: BitmapFontPS.hlsl  BitmapFontVS.hlsl  LinePS.hlsl  MSDFFontPS.hlsl  MSDFFontVS.hlsl  NormalLineGS.hlsl  SimpleTextPS.hlsl  TerrainVS.hlsl  TextPS.hlsl  TextVS.hlsl  TriangleVS.hlsl  UIBatch.hlsl
src/: CMakeLists.txt
src/app/: absolute_layout_clamp_test.cpp  clipping_test.cpp  device_validation_test.cpp  flexbox_test.cpp  font_batching_test.cpp  font_system_example.cpp  font_test.cpp  hittest_clipping_test.cpp  layout_fixes_test.cpp  layout_propagation_test.cpp  layout_test.cpp  main.cpp  msdf_font_example.cpp  panel_color_test.cpp  png_test.cpp  ui_demo.cpp  ui_test.cpp
src/core/: CMakeLists.txt
src/core/Assets/: README.md
src/core/include/Drift/Core/: AssetsManager.h  Color.h  Log.h  Profiler.h  README_LogProfiler.md
src/core/include/Drift/Core/Assets/: AssetsExample.h  AssetsManagerExample.h  AssetsSystem.h  FontAsset.h  Integration.h  README.md  TextureAsset.h
src/core/include/Drift/Core/Threading/: README.md  ThreadingExample.h  ThreadingSystem.h
src/core/src/: AssetsManager.cpp  Log.cpp  LogProfilerExample.cpp  Profiler.cpp
src/core/src/Assets/: AssetsExample.cpp  AssetsManagerExample.cpp  AssetsSystem.cpp  FontAsset.cpp  Integration.cpp  TextureAsset.cpp
src/core/src/Threading/: ThreadingExample.cpp  ThreadingSystem.cpp
src/engine/include/Drift/Engine/: EventBus.h
src/engine/include/Drift/Engine/Camera/: Camera.h  FreeCameraController.h  ICamera.h  ICameraController.h  PerspectiveCamera.h
src/engine/include/Drift/Engine/Input/: Input.h  InputManager.h  InputTypes.h
src/engine/include/Drift/Engine/Viewport/: IViewport.h  Viewport.h
src/engine/include/Drift/Math/: Camera.h  Math.h
src/engine/src/: EventBus.cpp
src/engine/src/Input/: GLFWInputManager.cpp
src/renderer/include/Drift/Renderer/: CBFrame.h  IRenderPass.h  RenderManager.h  TerrainPass.h  TrianglePass.h
src/renderer/src/: IRenderPass.cpp  RenderManager.cpp  TerrainPass.cpp  TrianglePass.cpp
src/rhi/include/Drift/RHI/: Buffer.h  Context.h  DepthStencilState.h  Device.h  Format.h  PipelineState.h  RHIDebug.h  RHIException.h  Resource.h  ResourceCache.h  ResourceManager.h  Scissor.h  Shader.h  Texture.h  Types.h  UIBatcher.h  UIBatcherBase.h
src/rhi/src/: ContextStub.cpp  DeviceStub.cpp  Format.cpp  ResourceManager.cpp  Scissor.cpp  UIBatcherBase.cpp
src/rhi_dx11/include/Drift/RHI/DX11/: BufferDX11.h  ContextDX11.h  DepthStencilStateDX11.h  DeviceDX11.h  PipelineStateDX11.h  RingBufferDX11.h  SamplerDX11.h  ShaderDX11.h  SwapChainDX11.h  TextureDX11.h  UIBatcherDX11.h
src/rhi_dx11/src/: BufferDX11.cpp  ContextDX11.cpp  DepthStencilStateDX11.cpp  DeviceDX11.cpp  PipelineStateDX11.cpp  RingBufferDX11.cpp  SamplerDX11.cpp  ShaderDX11.cpp  SwapChainDX11.cpp  TextureDX11.cpp  UIBatcherDX11.cpp
src/tools/: texture_pipeline.cpp
src/ui/include/Drift/UI/: EventBus.h  LayoutEngine.h  LayoutTypes.h  Transform2D.h  UI.h  UIContext.h  UIElement.h  UIInputHandler.h
src/ui/include/Drift/UI/DataDriven/: UIComponentRegistry.h  UIXMLParser.h
src/ui/include/Drift/UI/FontSystem/: Font.h  FontAtlas.h  FontManager.h  FontMetrics.h  FontRendering.h  FontSystem.h  FontSystemExample.h  MSDFGenerator.h  README.md  TextRenderer.h
src/ui/include/Drift/UI/LayoutEngine/: DirtyFlagSystem.h  FlexLayout.h
src/ui/include/Drift/UI/Styling/: StyleSheet.h
src/ui/include/Drift/UI/Widgets/: Button.h  Grid.h  Image.h  Label.h  Panel.h  StackPanel.h
src/ui/src/: EventBus.cpp  LayoutEngine.cpp  Transform2D.cpp  UIContext.cpp  UIElement.cpp  UIInputHandler.cpp
src/ui/src/DataDriven/: UIComponentRegistry.cpp
src/ui/src/FontSystem/: Font.cpp  FontAtlas.cpp  FontManager.cpp  FontMetrics.cpp  FontSystem.cpp  FontSystemExample.cpp  MSDFGenerator.cpp  TextRenderer.cpp
src/ui/src/LayoutEngine/: DirtyFlagSystem.cpp  FlexLayout.cpp
src/ui/src/Widgets/: Button.cpp  Grid.cpp  Image.cpp  Label.cpp  Panel.cpp  StackPanel.cpp
